# jointoit-test-task

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start
events/: admin.py  filters.py  models.py  serializers.py  views.py
events/migrations/: 0001_initial.py  0002_eventregistration.py
project/: settings.py  urls.py
